# tisza-scraper

./: .gitignore  444_archive.csv  444_archive_crawler.py  444_report.csv  444_sitemap_audit.py  444_top100.csv  444_ymd_sample2.csv  NewsCrawlerMVP.py  backfill_sitemap.py  backfill_sitemaps.yaml  config.yaml  embed_classify_summarize.py  export_embeddings_csv.py  fts_migrate.py  history_search.py  hvg_1y.csv  hvg_archive_crawler.py  inspect_db.py  inspect_embeddings.py  inspect_sitemaps.py  migrate_db.py  multi_archive_crawler_index.py  multi_archive_crawler_telexfix.py  news.sqlite  news_sites.yaml  news_sites_hvg.yaml  news_sites_index.yaml  news_sites_telex.yaml  requirements.txt  rss_filter.py  telex_1y.csv
NewsCrawlerMVP/news-crawler-mvp/: README.md  pyproject.toml  requirements.txt
NewsCrawlerMVP/news-crawler-mvp/src/: NewsCrawlerMVP.py  api_logs.json  index_1d.sqlite  init_app.py  narratives_index_2025-11.json  news.sqlite  news_query.py  telex_30d.sqlite
NewsCrawlerMVP/news-crawler-mvp/src/news_crawler/: __init__.py  api_server.py  article_reader.py  backfill_domain_batches.py  backfill_sections.py  cli.py  core.py  embedder.py  fetcher.py  filters.py  models.py  news_10d.sqlite  news_query.py  pipeline.py  print_article.py  printer_output.txt  repository.py  scrape_archive.py  search.py
NewsCrawlerMVP/news-crawler-mvp/src/news_crawler/AI_tools/: ai_tagging.py  narrative_detector.py
NewsCrawlerMVP/news-crawler-mvp/src/news_crawler/adapters/: __init__.py  api_server.py  (+2 more)
NewsCrawlerMVP/news-crawler-mvp/tests/: test_init_app.py  test_initialization.py
(+6 files in other folders)
